--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
         sed -i 's|<base href="/" />|<base href="/jubilant-enigma" />|g' ./publish/wwwroot/index.html
 
     - name: Copy index to 404
-      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      run: cp publish/wwwroot/index.html publish/wwwroot/404.html
 
     - name: Add .nojekyll File
-      run: touch release/wwwroot/.nojekyll
+      run: touch publish/wwwroot/.nojekyll
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.0
