--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
   
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install npm dependencies
+      uses: npm install
+  
+  
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
