--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: '14'
 
     - name: Install npm dependencies
-      uses: npm install
+      run: npm install
   
   
     - name: Setup .NET
