--- a/Aegis.Core/Aegis.Core.csproj
+++ b/Aegis.Core/Aegis.Core.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Domain\Events\" />
     <Folder Include="Domain\ValueObjects\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Interfaces\Data\" />
     <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
 
