--- a/Aegis.Web/Aegis.Web.csproj
+++ b/Aegis.Web/Aegis.Web.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Aegis.Core\Aegis.Core.csproj" />
+    <ProjectReference Include="..\Aegis.Game\Aegis.Game.csproj" />
   </ItemGroup>
 
   <ItemGroup>
